After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 676618 - RTSP Scale header field never set
RTSP Scale header field never set
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.10.31
Other All
: Normal normal
: 0.10.32
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-23 07:54 UTC by Maria Giovanna Chiossa
Modified: 2012-05-24 08:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (510 bytes, patch)
2012-05-23 07:54 UTC, Maria Giovanna Chiossa
none Details | Review

Description Maria Giovanna Chiossa 2012-05-23 07:54:54 UTC
Created attachment 214727 [details] [review]
patch

Setting GST_SEEK_FLAG_SKIP when sending a seek event in rtspsrc, gst_rtspsrc_play should set "Scale" field in rtsp header. 
Indeed the boolean "src->skip" is set after the call, so in gst_rtspsrc_play set always "Speed" instead of "Scale".
You can find In attachment a proposed patch: I moved this instruction just before the gst_rtspsrc_play call, evaluate if it is better another place.
Comment 1 Wim Taymans 2012-05-24 08:02:31 UTC
commit ff019d05f6cd4881b0eb98ac13ed135fadf3159a
Author: Maria Giovanna Chiossa <mariagiovanna.chiossa at selexelsag.com>
Date:   Thu May 24 09:57:31 2012 +0200

    rtsp: add the Scale header when needed
    
    Setting GST_SEEK_FLAG_SKIP when sending a seek event in rtspsrc should
    set the "Scale" field in the rtsp PLAY header.
    Because the boolean "src->skip" is set after the call, "Speed" instead
    of "Scale" is always set. Move the assignment before issuing the _play
    request.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=676618